
Version 1.0-3

o effect function now works if na.action is na.exclude.

Version 1.0-4

o Fixed small bug introduced in version 1.0-3.

Version 1.0-5

o x.var and z.var arguments to plot.effect now take names as well as indices.

Version 1.0-6

o A variable specified in xlevels can be fixed to a single value.

Version 1.0-7

o Made effect() generic, with a method for lm objects that handles glm objects as well.

Version 1.0-8

o Small fixes to the help files.

Version 1.0-9

o Small change to compile without a warning in R 2.4.0.

Version 1.0-10

o Standard errors of effects are computed using t rather than standard-normal distribution for models with estimated dispersion (as suggested by Brian Ripley).

o Small fixes.

o Objects are now named "eff" and "eff.list" rather than "effect" and "effect.list".

o Data sets now provided by lazy data.

Version 1.0-11

o Replaced obsolete \non_function{} markup in Rd files (reported by Kurt Hornik).

Version 1.0-12

o key.args argument added to plot.eff() (coutesy of Michael Friendly), to allow conrol over, e.g., placement of legend.

Version 2.0-0

o Jangman Hong joins project.

o support added for multinomial and proportional-odds logit models, as fit by multinom() (in nnet package) and polr() (in MASS) package, following results in Fox and Andersen (2006).

o added the argument given.values to effect() methods for finer-grain control of displays.

Version 2.0-1

o Fixed bug in effect.polr() that prevented computation for a model with a single term (reported by Paul Prew).

Version 2.0-2

o Fixed bug in print(), summary(), and plot() methods for polytomous logit models with a response with numbered levels (reported by Paul Prew).

Version 2.0-3

o Fixed bug in all effect() methods that caused error when na.action="na.exclude" (reported by Tracy Lightcap and Rob Goedman).

Version 2.0-4

o Palettes from the colorspace package are used by default for stacked plots.

o Small changes.